--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,12 +2,16 @@
 // Welcome to Astro! Everything between these triple-dash code fences
 // is your "component front matter". It never runs in the browser.
 console.log('This runs in your terminal, not the browser!');
+import Sidebar from '../components/Sidebar.tsx'
 ---
 <!-- Below is your "component template." It's just HTML, but with
      some magic sprinkled in to help you build great templates. -->
 <html>
   <body>
-    <h1>Hello, World!</h1>
+    <main>
+        <h1>Hello, World!</h1>
+        <Sidebar/>
+    </main>
   </body>
 </html>
 <style>
