add click event

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Sidebar from '../components/Sidebar.tsx'
 <html>
   <body class="h-screen">
     <main class="h-full grid grid-cols-[280px_1fr] grid-rows-[50px_1fr_100px] gap-2">
-        <Sidebar className="row-start-2"/>
+        <Sidebar className="row-start-2" client:load/>
         <header>
           <h1>Hello, World!</h1>
         </header>
